[package]
name = "lab-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

# No [dependencies], by design. lab-core is the ecosystem root: it depends on
# nothing in the workspace, and everything may depend on it. That absence is
# the definition of the layer, and `cargo xtask check` asserts it as a fact.

